3) Please include your name with the changes you make.
4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
------------------------------------------------------------------------------
Changes for SVN:

Nicolas Weeger 2007-04-18

plugins/cfpython/cfpython_object.c: don't insert hooks in 'more' parts of items.
plugins/cfpython/cfpython.c: player list (GetPlayers()), activate 'clock' event.
---
Give access to player list to plugins. Fix mishandling of multipart objects.
 include/plugin.h
 server/plugins.c
Nicolas Weeger 2007-04-17

common/region.c: don't crash if no regions file found.
Nicolas Weeger 2007-04-15

Wrap change_exp() function. Make 'exp' property the same as others.
Also fix a crash: don't insert destroy hooks in archetype clones.
 include/sproto.h
 plugins/cfpython/cfpython_object.c
 plugins/cfpython/include/Makefile.in
 plugins/cfpython/include/cfpython_object_private.h
 plugins/common/include/plugin_common.h
 plugins/common/plugin_common.c
Nicolas Weeger 2007-04-15

 server/plugins.c: wrong case - FLAG_FRIENDLY is not the same as friendlylist :)
 plugins/cfpython/cfpython_object.c: add 'IsPet' and 'AttackMovement'
 plugins/cfpython/include/cfpython_object_private.h
Nicolas Weeger 2007-04-15

server/skills.c: EVENT_TRIGGER for magical scroll writing.
Nicolas Weeger 2007-04-15

server/cfpython.c: add AttackType, AttackTypeNumber, EventType constants.
Nicolas Weeger 2007-04-15

common/living.c: fix comments.
common/object.c: dump owner too.
server/plugins.c: check values for cfapi_map_get_object_at(). Handle FLAG_FRIENDLY
 and friendlist.
Nicolas Weeger 2007-04-15

Enable plugins to change the 'path' property of a map.
 plugins/cfpython/cfpython_map.c
 plugins/cfpython/include/cfpython_map_private.h
 plugins/common/include/plugin_common.h
 plugins/common/plugin_common.c
Nicolas Weeger 2007-04-15
