@@ -722,7 +722,8 @@ static int attack_ob_simple (object *op, object *hitter, int base_dam,
         goto error;
 
     /* Lauwenmark: Handle for plugin attack event */
-    execute_event(op, EVENT_ATTACK,hitter,hitter->current_weapon ? hitter->current_weapon : hitter,NULL,SCRIPT_FIX_ALL);
+    if (execute_event(op, EVENT_ATTACK,hitter,hitter->current_weapon ? hitter->current_weapon : hitter,NULL,SCRIPT_FIX_ALL) != 0)
+        return;
 
     /* Lauwenmark: This is used to handle script_weapons with weapons.
      * Only used for players.
@@ -732,8 +733,9 @@ static int attack_ob_simple (object *op, object *hitter, int base_dam,
         if (hitter->current_weapon != NULL)
         {
             /* Lauwenmark: Handle for plugin attack event */
-            execute_event(hitter->current_weapon, EVENT_ATTACK,
-                          hitter,op,NULL,SCRIPT_FIX_ALL);
+            if (execute_event(hitter->current_weapon, EVENT_ATTACK,
+                          hitter,op,NULL,SCRIPT_FIX_ALL) != 0)
+                return;
         }
             }
     op_tag = op->count;
