@@ -15,6 +15,10 @@ else.  With this, include the file(s) that you changed.
 ------------------------------------------------------------------------------
 Changes for SVN:
 
+ server/attack.c: enable plugins to prevent attacks.
+Nicolas Weeger 2007-04-18
+
+server/plugins.c: fix wrong return type.
 Nicolas Weeger 2007-04-18
 
 plugins/cfpython/cfpython_object.c: don't insert hooks in 'more' parts of items.
